packages/webassemblyjs/test/fixtures/validate-func-result-type/exec.tjs
// TODO(sven): move this to validation
it.skip("should throw a validation error", () => {
  const fn = () => WebAssembly.instantiate(wasmmodule);

  assert.throws(fn, "Validation errors");
});
