packages/webassemblyjs/test/fixtures/type-errors/br-4/exec.tjs
it("should throw an error during instantiation when type checking fails", () => {
  assert.throws(
    () => WebAssembly.instantiateFromSource(watmodule),
    "Expected type i32 but got none"
  );
});
